chore(quality): 14 Sonar-Findings der Modul-Rollen-Arbeit beheben
Der Wochenlauf vom 23.08. hat root auf sonar.status=ERROR gesetzt
(new_violations=14, alles aus den PRs #106/#107). Keine Suppressions,
keine Verhaltensaenderung — das Modul-Rollen-Feature bleibt exakt wie
released (1.605.0).

ModuleRoleService
- S3077 (3x): die drei Nachschlagetabellen sind einmalige, fertig
  gebaute und unveraenderliche Momentaufnahmen. volatile publiziert
  zwar die Referenz, sagt aber nichts ueber das dahinterliegende
  Objekt aus. Statt die Sammlungen auf ConcurrentHashMap umzustellen
  (das waere ein veraenderlicher Cache und damit ein anderes Modell)
  halten jetzt AtomicReference-Felder die weiterhin unveraenderlichen
  Snapshots — gleiche Semantik, ausdruecklich thread-sicherer Halter.
- S2864: reportAtStartup iteriert ueber entrySet statt keySet+get.
- S3776: resolve() von Cognitive Complexity 16 auf 1 entlastet, die
  Schleifenkoerper stecken in requiredRolesOf() und indexRequiredRoles().

Feld- auf Konstruktor-Injection (S6813, S6829)
- ModuleRoleDeclarationProvider: Feld final, @Autowired(required=false)
  am Ein-Argument-Konstruktor, No-arg bleibt als Rueckfallebene.
- PlaintextRoleRegistry: dito.
- MyUserBackingBean: alle sieben Abhaengigkeiten ueber einen
  @Autowired-Konstruktor. Die Registry bleibt optional — das per
  JSpecify @Nullable markierte Argument liest Spring 7 als
  required=false (verifiziert ueber MethodParameter.isOptional).

Kleinkram
- S1192: "ROLE_" in PlaintextRole als ROLE_PREFIX-Konstante.
- S1874: org.springframework.lang.Nullable ist deprecated ->
  org.jspecify.annotations.Nullable (RollenzuteilungBackingBean).
- S6885: Math.clamp statt Math.max(Math.min(...)).
- S7467: unbenanntes catch-Pattern im Boot-Retry.
- S5785: assertNull statt assertFalse(x != null).

Voller Reactor gruen (25 Module, -DexcludedGroups=quality-gate); die
27 Modul-Rollen-Tests laufen unveraendert durch.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Sessio